[package]
name = "lzip-sys"
version = "0.1.2+1.13"
authors = ["Firas Khalil Khana <firasuke@glaucuslinux.org>"]
links = "lzip"
build = "build.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/firasuke/lzip-rs"
homepage = "https://github.com/firasuke/lzip-rs"
documentation = "https://docs.rs/lzip-sys"
description = """
Bindings to lzlib for lzip compression and decompression exposed as
Reader/Writer streams.
"""
categories = ["external-ffi-bindings"]

[lib]
name = "lzip_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.2.122"

[features]
# Enable this feature if you want to have a statically linked lzip
static = []
